<resources>
    <string name="app_name">Calorie Tracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="create_account">"Register"</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_sign_out">"Sign Out"</string>
    <string name="button_launch">"Launch Tracker"</string>
    <string name="menu_report">"Report"</string>
    <string name="menu_self_select_mode">"Self-Select Mode"</string>
    <string name="menu_person_info">"Info"</string>
    <string name="menu_health_mode">"Health Mode"</string>
    <string name="user_name">"Name"</string>
    <string name="age">"Age"</string>
    <string name="female">"Female"</string>
    <string name="male">"Male"</string>
    <string name="prompt_weight">"Weight(kg)"</string>
    <string name="prompt_height">"Height(m)"</string>
    <string name="rarely">"Rarely"</string>
    <string name="sometimes">"sometimes"</string>
    <string name="medium">"medium"</string>
    <string name="often">"often"</string>
    <string name="always">"always"</string>
    <string name="text_view_gender">"Choose your gender"</string>
    <string name="text_view_frequency">"Choose your frequency for sports"</string>
    <string name="submit">"Submit your info"</string>
    <string name="prompt_name">"User name"</string>
    <string name="background">background</string>
    <string name="admin_log">Log in as Admin</string>
    <string name="admin_name">Admin</string>
    <string name="item">Food</string>>
    <string name="submit_menu">submit weekly menu</string>
    <string name="server_client_id">523448643163-p8q6fguhdidlvuouoiug214d9gq19hgr.apps.googleusercontent.com</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">"Cancel"</string>
</resources>
