<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/new_age"
        android:layout_width="0dp"
        android:hint="@string/age"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" tools:textSize="14sp"/>

    <EditText
        android:id="@+id/new_height"
        android:layout_width="0dp"
        android:hint="@string/prompt_height"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_age" android:textSize="14sp"/>
    <EditText
        android:id="@+id/new_weight"
        android:layout_width="0dp"
        android:hint="@string/prompt_weight"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_height" android:textSize="14sp"/>
    <TextView
        android:id="@+id/text_view_gender"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_gender"
        app:layout_constraintTop_toBottomOf="@+id/new_weight"
        android:textSize="17sp" tools:ignore="MissingConstraints" android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="12dp" android:layout_marginStart="12dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_gender"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:orientation="horizontal" tools:ignore="DuplicateIds,MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_gender"
        >
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/text_view_frequency"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_frequency"
        app:layout_constraintTop_toBottomOf="@+id/text_view_gender"
        android:textSize="17sp" tools:ignore="MissingConstraints" android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="12dp" android:layout_marginStart="12dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
        android:orientation="vertical" tools:ignore="MissingConstraints" android:id="@+id/new_frequency"
        app:layout_constraintTop_toBottomOf="@+id/new_gender"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp">
        <RadioButton android:id="@+id/frequency_rarely"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rarely"
            />
        <RadioButton android:id="@+id/frequency_sometimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sometimes"
            />
        <RadioButton android:id="@+id/frequency_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            />
        <RadioButton android:id="@+id/frequency_often"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/often"
            />
        <RadioButton android:id="@+id/frequency_always"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/always"
            />
    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#ffa07a"/>

</androidx.constraintlayout.widget.ConstraintLayout>